--- a/config/database.yml
+++ b/config/database.yml
@@ -26,7 +26,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: tan
+  database: db/test.mysql2
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -50,5 +50,3 @@ test:
 production:
   <<: *default
   database: tesst_production
-  username: tesst
-  password: <%= ENV['TESST_DATABASE_PASSWORD'] %>
